structmeta-tests/tests/compile_fail/struct_meta/expected_name_args_or_flag_buf_name_value.stderr
error: cannot find parameter `value` in this scope
 --> $DIR/expected_name_args_or_flag_buf_name_value.rs:1:53
  |
1 | #[structmeta_tests::attr_required_name_args_or_flag(value = 10)]
  |                                                     ^^^^^
